Modification des prix

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
       </div>
       <div class="workflow-container-code">
         <div class="column-one-maven">
-          <img src="img/column-one-maven.png" alt="github info">
+          <img src="img/git.jpg" alt="github info">
           <h3>Regular commit flow</h3>
           <p>Using git and github (private repository)<br>
             to push new commits into the master<br>
             branch, allowing for a steady workflow<br>
             for the final release. With the current<br>
             commit count being at 30+. Link <br>
-            to repository can be found <a href="https://github.com/DrExpresso/Gopool">here</a>.</p>
+            to repository can be found <a href="https://github.com/fbplamachine/Bugna-web">here</a>.</p>
         </div>
         <div class="column-two-firebase">
           <pre>
@@ -150,11 +150,11 @@
       <div class="api-container">
         <div>
           <h4>Commits:</h4>
-          <span id="commits-text">0</span>
+          <span id="commits-text">3</span>
         </div>
         <div>
           <h4>Watchers:</h4>
-          <span id="watchers-text">0</span>
+          <span id="watchers-text">1</span>
         </div>
         <div>
           <h4>Forks:</h4>
@@ -172,7 +172,7 @@
         <div class="pricing-table">
           <div class="column-one-professional">
             <h3>Professional Plan</h3>
-            <p>£100</p>
+            <p>From 500 000F</p>
             <button class="sign-up-button" type="button">Sign up</button>
             <hr>
             <p>Unlimited rides</p>
@@ -184,7 +184,7 @@
           </div>
           <div class="column-one-standard">
             <h3>Standard Plan</h3>
-            <p>£50</p>
+            <p>From 250 000F</p>
             <button class="sign-up-button" type="button">Sign up</button>
             <hr>
             <p>50 rides</p>
@@ -196,7 +196,7 @@
           </div>
           <div class="column-one-basic">
             <h3>Basic Plan</h3>
-            <p>£20</p>
+            <p>From 100 000F</p>
             <button class="sign-up-button" type="button">Sign up</button>
             <hr>
             <p>20 rides</p>
